--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
+    "react-typed": "^2.0.12",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
