--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
   "dependencies": {
     "motion": "^11.13.5",
     "react": "^18.3.1",
-    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
-    "react-typed": "^2.0.12",
-    "sweetalert2": "^11.14.5"
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
